--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-image: url("transparent_synth.gif"), url("stars.gif");
-  background-position: center, center;
+  background-position: center bottom, center;
   background-size: auto, auto;
   background-repeat: no-repeat, repeat;
   object-fit: contain;
