--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,16 @@
   color: #61dafb;
 }
 
+.ray-name {
+  text-shadow: 0 -1px 4px #42f5e9,
+  0 0 20px #42f5e9,
+  -20px -37px 0 rgba(4, 248, 251, 0);
+  font-family: cyberspace, serif;
+  font-size: xxx-large;
+  position: absolute;
+  top: 15%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -39,4 +49,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+@font-face {
+  font-family: cyberspace;
+  src: url('cyberspace_raceway_font/Cyberspace Raceway Front.otf');
 }
